public/style.css
body {
    background-color: #131316;
    font-family: 'Inter', sans-serif;
    color: #fffffe;
    display: flex;
    justify-content: start;
}

.container {
    margin-right: 0;
}

.fa-paper-plane {
    color: #000;
    margin-right: 2px;
    font-size: 1.1rem;
}

.btn {
    background-color: #ff8906;
    border: none;
    color: #fff;
}

.chat .btn {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.chat {
    width: 99%;
    margin: auto;
    background-color: #0f0e17;
    border-radius: 12px !important;
}

.messages {
    height: 80vh;
    overflow-y: auto;
    padding: 30px;
}

.card-header {
    background-color: #ff8906;
    font-weight: 500;
    font-size: 1.2rem;
    border-radius: 12px 12px 0 0 !important;
}

.card-header, .chat {
    border: none;
}

#input {
    background-color: #2b2b2b;
    border: none;
    color: #fff;
    border-radius: 7px;
}

#input::placeholder {
    color: #fff;
    opacity: 0.7;
}

input:focus {
    box-shadow: none !important;
    outline: none !important;
}

.list-group-item {
    background-color: #ff8906;
    color: #fff;
    border-radius: 30px !important;
    width: fit-content;
    padding: 8px 20px;
    margin: 0 0 30px 0;
    max-width: 80%;
    word-break: break-word;
    border: none;
}

.username {
    display: block;
    font-size: 0.75rem;
    margin: 0 0 0 10px;
}

.message-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    color: #a7a9be;
}

.system-message {
    color: #7e7e7e;
    list-style-type: none;
    font-size: 0.9rem;
    text-align: center;
    margin: 10px 0;
    font-family: 'Lucida', monospace;
    font-weight: 500;
}

.client-message .list-group-item {
    align-self: flex-end !important;
    background-color: #f25f4c !important;
    color: #fff;
}

.client-message .username {
    display: none;
}

.qr {
    width: 150px;
    height: 150px;
    margin: 23px 20px 0 0;
}

